[package]
name = "rust-ipmi"
version = "0.1.0"
authors = ["Harris Temuri <harris.temuri@gmail.com>"]
edition = "2021"
description = "IPMI client library for rust"
readme = "README.md"
repository = "https://github.com/htemuri/rust-ipmi/"
license = "GPL-3.0-or-later"
keywords = ["ipmi", "rmcp"]
categories = ["hardware-support", "api-bindings", "parsing"]
exclude = ["/src/main.rs"]

[dependencies]
bitvec = "1.0.1"
hmac = "0.12.1"
sha2 = "0.10.8"
aes = "0.8.3"
cbc = "0.1.2" 
rand = "0.8.5"
thiserror = "1.0.53"